--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-addons-update": "^0.14.0",
     "react-event-listener": "^0.1.1",
     "recompose": "^0.15.0",
+    "react-memo": "^0.2.0",
     "simple-assign": "^0.1.0",
     "warning": "^2.1.0"
   },
