move lodash to peerDependencies

--- a/package.json
+++ b/package.json
@@ -31,9 +31,6 @@
   "homepage": "http://material-ui.com/",
   "dependencies": {
     "inline-style-prefixer": "^0.6.6",
-    "lodash.flowright": "^3.2.1",
-    "lodash.merge": "^3.3.2",
-    "lodash.throttle": "~3.0.4",
     "react-addons-create-fragment": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
     "react-addons-transition-group": "^0.14.0",
@@ -43,6 +40,7 @@
     "warning": "^2.1.0"
   },
   "peerDependencies": {
+    "lodash": "4.3.0",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-tap-event-plugin": "^0.2.0"
