[ReactNative] Add Subheader component

--- a/docs/ios/MaterialUIDocs.xcodeproj/xcshareddata/xcschemes/MaterialUIDocs.xcscheme
+++ b/docs/ios/MaterialUIDocs.xcodeproj/xcshareddata/xcschemes/MaterialUIDocs.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "App.app"
-               BlueprintName = "App"
-               ReferencedContainer = "container:App.xcodeproj">
+               BuildableName = "MaterialUIDocs.app"
+               BlueprintName = "MaterialUIDocs"
+               ReferencedContainer = "container:MaterialUIDocs.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AppTests.xctest"
-               BlueprintName = "AppTests"
-               ReferencedContainer = "container:App.xcodeproj">
+               BuildableName = "MaterialUIDocsTests.xctest"
+               BlueprintName = "MaterialUIDocsTests"
+               ReferencedContainer = "container:MaterialUIDocs.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AppTests.xctest"
-               BlueprintName = "AppTests"
-               ReferencedContainer = "container:App.xcodeproj">
+               BuildableName = "MaterialUIDocsTests.xctest"
+               BlueprintName = "MaterialUIDocsTests"
+               ReferencedContainer = "container:MaterialUIDocs.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "App.app"
-            BlueprintName = "App"
-            ReferencedContainer = "container:App.xcodeproj">
+            BuildableName = "MaterialUIDocs.app"
+            BlueprintName = "MaterialUIDocs"
+            ReferencedContainer = "container:MaterialUIDocs.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -77,9 +77,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "App.app"
-            BlueprintName = "App"
-            ReferencedContainer = "container:App.xcodeproj">
+            BuildableName = "MaterialUIDocs.app"
+            BlueprintName = "MaterialUIDocs"
+            ReferencedContainer = "container:MaterialUIDocs.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -96,9 +96,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "App.app"
-            BlueprintName = "App"
-            ReferencedContainer = "container:App.xcodeproj">
+            BuildableName = "MaterialUIDocs.app"
+            BlueprintName = "MaterialUIDocs"
+            ReferencedContainer = "container:MaterialUIDocs.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
