--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "keycode": "^2.1.0",
     "lodash.flowright": "^3.2.1",
     "lodash.merge": "^4.1.0",
+    "lodash.reduce": "^4.2.0",
     "lodash.throttle": "^4.0.0",
     "react-addons-create-fragment": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
@@ -97,9 +98,12 @@
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
+    "lodash": "^4.5.1",
     "mocha": "^2.2.5",
     "phantomjs": "^1.9.17",
+    "random-words": "0.0.1",
     "react": "^0.14.0",
+    "react-addons-perf": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
