--- a/examples/webpack-example/package.json
+++ b/examples/webpack-example/package.json
@@ -21,6 +21,7 @@
     "eslint": "^2.2.0",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^4.0.0",
+    "estraverse-fb": "^1.3.1",
     "html-webpack-plugin": "^2.7.2",
     "react-hot-loader": "^1.3.0",
     "transfer-webpack-plugin": "^0.1.4",
