update example webpack app to work with new eslint rule for material-ui/docgen-ignore-before-comment

--- a/examples/webpack-example/.eslintrc
+++ b/examples/webpack-example/.eslintrc
@@ -22,11 +22,13 @@
     "space-unary-ops": 0,
     "space-infix-ops": 0,
     "consistent-return": 0,
-    "strict": 0
+    "strict": 0,
+    "material-ui/docgen-ignore-before-comment": 2
   },
   "parser": "babel-eslint",
   "plugins": [
-    "react"
+    "react",
+    "material-ui"
   ],
   "ecmaFeatures": {
     "jsx": true
