--- a/examples/webpack-example/package.json
+++ b/examples/webpack-example/package.json
@@ -20,6 +20,7 @@
     "babel-runtime": "^6.3.19",
     "eslint": "~2.2.0",
     "eslint-loader": "^1.1.1",
+    "eslint-plugin-material-ui":"../../packages/eslint-plugin-material-ui",
     "eslint-plugin-react": "^4.0.0",
     "html-webpack-plugin": "^2.7.2",
     "react-hot-loader": "^1.3.0",
