--- a/.editorconfig
+++ b/.editorconfig
@@ -11,8 +11,8 @@ trim_trailing_whitespace = true
 
 # Unix-style newlines with a newline ending every file
 [*]
-indent_style = space
-indent_size = 2
+indent_style = tab
+indent_size = 4
 end_of_line = lf
 charset = utf-8
 insert_final_newline = true
