--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-react-native": "^1.5.3",
     "babel-preset-stage-1": "^6.3.13",
     "babel-runtime": "^6.3.19",
     "chai": "^3.2.0",
@@ -105,6 +106,8 @@
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
+    "react-look-native": "^1.0.0-beta7",
+    "react-native": "^0.22.2",
     "react-tap-event-plugin": "^0.2.0",
     "recursive-readdir-sync": "^1.0.6",
     "rimraf": "^2.4.3",
