--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "babel-plugin-transform-replace-object-assign": "^0.2.1",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-runtime": "^6.6.1",
