--- a/exg/package.json
+++ b/exg/package.json
@@ -20,12 +20,19 @@
     "android:setup-port": "adb reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
+    "react-css-modules": "^3.7.6",
     "react-title-component": "^1.0.1",
     "simple-assign": "^0.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.0",
-    "css-loader": "^0.23.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "css-loader": "^0.23.1",
     "doctrine": "^1.1.0",
     "eslint": "^2.5.1",
     "eslint-plugin-babel": "^3.1.0",
@@ -37,6 +44,7 @@
     "intl-locales-supported": "^1.0.0",
     "json-loader": "^0.5.4",
     "marked": "^0.3.5",
+    "node-sass": "^3.7.0",
     "raw-loader": "^0.5.1",
     "react-addons-perf": "^15.0.1",
     "react-docgen": "^2.4.0",
@@ -46,8 +54,11 @@
     "react-router": "^2.0.0",
     "react-swipeable-views": "^0.5.0",
     "recast": "^0.11.4",
-    "style-loader": "0.13.1",
+    "resolve-url-loader": "^1.4.3",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "transfer-webpack-plugin": "^0.1.4",
+    "url-loader": "^0.5.7",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1"
   }
