--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "homepage": "http://material-ui.com/",
   "scripts": {
-    "build": "npm run build:icon-index && npm run build:babel && npm run build:copy-files",
+    "build": "npm run build:icon-index && npm run build:babel && npm run build:copy-files && npm run build:umd && npm run build:min",
     "build:icon-index": "babel-node ./scripts/icon-index-generator.js",
     "build:babel": "babel ./src --ignore *.spec.js --out-dir ./build",
     "build:copy-files": "babel-node ./scripts/copy-files.js",
+    "build:umd": "cross-env NODE_ENV=development webpack src/index.js build/umd/MaterialUI.js",
+    "build:min": "cross-env NODE_ENV=production webpack -p src/index.js build/umd/MaterialUI.min.js",
     "clean:build": "rimraf build",
     "lint": "eslint src docs/src test/integration && echo \"eslint: no lint errors\"",
     "lint:find-rules": "eslint-find-rules -u .eslintrc.js",
