Changed target directory from build to dist (build is for the NPM package)

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "build:icon-index": "babel-node ./scripts/icon-index-generator.js",
     "build:babel": "babel ./src --ignore *.spec.js --out-dir ./build",
     "build:copy-files": "babel-node ./scripts/copy-files.js",
-    "build:umd": "cross-env NODE_ENV=development webpack src/index.umd.js build/umd/MaterialUI.js",
-    "build:min": "cross-env NODE_ENV=production webpack -p src/index.umd.js build/umd/MaterialUI.min.js",
+    "build:umd": "cross-env NODE_ENV=development webpack src/index.umd.js dist/MaterialUI.js",
+    "build:min": "cross-env NODE_ENV=production webpack -p src/index.umd.js dist/MaterialUI.min.js",
     "clean:build": "rimraf build",
     "lint": "eslint src docs/src test/integration && echo \"eslint: no lint errors\"",
     "lint:find-rules": "eslint-find-rules -u .eslintrc.js",
