initial flow setup - dependencies, babel, eslint, and flowconfig

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
   "presets": ["es2015", "stage-1", "react"],
   "plugins": [
+    "flow-react-proptypes",
+    "transform-flow-strip-types",
     "./scripts/babel-transform-object-assign-require",
     "transform-dev-warning"
   ],
