initial flow setup - dependencies, babel, eslint, and flowconfig

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clean": "npm run clean:build",
     "clean:docs": "rimraf docs/api/*",
     "clean:build": "rimraf build",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "lint": "eslint src docs/site/src test/integration && echo \"eslint: no lint errors\"",
     "prebuild": "npm run clean:build",
     "test": "cross-env NODE_ENV=test babel-node test/index.js",
@@ -68,7 +69,9 @@
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-flow-react-proptypes": "^0.7.4",
     "babel-plugin-transform-dev-warning": "^0.1.0",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-plugin-transform-react-constant-elements": "^6.5.0",
     "babel-plugin-transform-react-inline-elements": "^6.6.5",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.6",
@@ -85,9 +88,11 @@
     "enzyme": "^2.2.0",
     "eslint": "^2.9.0",
     "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-flow-vars": "^0.4.0",
     "eslint-plugin-material-ui": "./packages/eslint-plugin-material-ui",
     "eslint-plugin-mocha": "^3.0.0",
     "eslint-plugin-react": "^5.0.1",
+    "flow-bin": "^0.27.0",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.3",
     "istanbul": "^1.0.0-alpha.2",
