--- a/docs/package.json
+++ b/docs/package.json
@@ -46,6 +46,7 @@
     "react-native": "^0.17.0",
     "react-router": "^2.5.2",
     "react-swipeable-views": "^0.6.3",
+    "react-tap-event-plugin": "^1.0.0",
     "recast": "^0.11.10",
     "style-loader": "0.13.1",
     "webpack": "^1.13.1",
