--- a/package.json
+++ b/package.json
@@ -102,6 +102,6 @@
     "recursive-readdir-sync": "^1.0.6",
     "rimraf": "^2.5.3",
     "sinon": "^1.17.3",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
   }
 }
