--- a/circle.yml
+++ b/circle.yml
@@ -21,6 +21,7 @@ dependencies:
     - "node_modules"
     - "docs/site/node_modules"
     - "test/regressions/site/node_modules"
+    - "~/docker-images"
 test:
   override:
     - ./scripts/run-travis-tests.sh && cat ./test/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
