--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
   "presets": ["es2015", "stage-1", "react"],
   "plugins": [
-    ["transform-replace-object-assign", "simple-assign"],
+    [ "transform-decorators-legacy", "transform-replace-object-assign",
+      "simple-assign"],
     "transform-dev-warning"
   ],
   "env": {
