--- a/docs/src/.babelrc
+++ b/docs/src/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": ["react", "es2015", "stage-1"],
   "plugins": [
-    ["transform-replace-object-assign", "simple-assign"]
+    ["transform-decorators-legacy", "transform-replace-object-assign", "simple-assign"]
   ],
   "env": {
     "docs-production": {
