--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
   },
   "devDependencies": {
     "app-module-path": "^2.1.0",
-    "babel-cli": "^6.7.7",
-    "babel-core": "^6.17.0",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-dev-warning": "^0.1.0",
@@ -68,24 +68,24 @@
     "babel-plugin-transform-replace-object-assign": "^0.2.1",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
-    "babel-runtime": "^6.6.1",
+    "babel-runtime": "^6.18.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "cross-env": "^3.1.3",
-    "enzyme": "^2.4.1",
-    "eslint": "3.7.1",
+    "enzyme": "^2.5.1",
+    "eslint": "^3.8.1",
     "eslint-find-rules": "^1.11.0",
     "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-material-ui": "./packages/eslint-plugin-material-ui",
     "eslint-plugin-mocha": "^4.7.0",
-    "eslint-plugin-react": "6.3.0",
+    "eslint-plugin-react": "^6.4.1",
     "fs-extra": "^0.30.0",
     "glob": "^7.1.1",
     "istanbul": "^1.1.0-alpha.1",
-    "jsdom": "^9.7.1",
+    "jsdom": "^9.8.3",
     "json-loader": "^0.5.4",
     "karma": "^1.1.1",
     "karma-mocha": "^1.1.1",
