--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
   "devDependencies": {
     "app-module-path": "^2.1.0",
     "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.4",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^6.2.7",
     "babel-plugin-transform-dev-warning": "^0.1.0",
     "babel-plugin-transform-react-constant-elements": "^6.5.0",
     "babel-plugin-transform-react-inline-elements": "^6.6.5",
@@ -75,20 +75,20 @@
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "cross-env": "^3.1.3",
-    "enzyme": "^2.5.1",
-    "eslint": "^3.8.1",
-    "eslint-find-rules": "^1.11.0",
+    "enzyme": "^2.6.0",
+    "eslint": "^3.9.1",
+    "eslint-find-rules": "^1.14.3",
     "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-material-ui": "./packages/eslint-plugin-material-ui",
     "eslint-plugin-mocha": "^4.7.0",
-    "eslint-plugin-react": "^6.4.1",
-    "fs-extra": "^0.30.0",
+    "eslint-plugin-react": "6.4.1",
+    "fs-extra": "^1.0.0",
     "glob": "^7.1.1",
     "istanbul": "^1.1.0-alpha.1",
     "jsdom": "^9.8.3",
     "json-loader": "^0.5.4",
     "karma": "^1.1.1",
-    "karma-mocha": "^1.1.1",
+    "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
@@ -105,6 +105,6 @@
     "recursive-readdir-sync": "^1.0.6",
     "rimraf": "^2.5.3",
     "sinon": "^1.17.3",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.3"
   }
 }
