Add custom `babel-es2015-preset`, Transpile `index.js` file with `babel`

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "http://material-ui.com/",
   "scripts": {
-    "build": "npm run build:icon-index && npm run build:babel && npm run build:copy-files",
+    "build": "npm run build:icon-index && npm run build:babel && npm run build:copy-files && npm run build:index",
+    "build:index": "BABEL_ENV=es babel ./src/index.js --out-file ./build/index.es.js",
     "build:icon-index": "babel-node ./scripts/icon-index-generator.js",
     "build:babel": "NODE_ENV=release babel ./src --out-dir ./build --ignore spec.js",
     "build:copy-files": "babel-node ./scripts/copy-files.js",
