include `react-tap-event-plugin@^2.0.0` for `react@^15.4.0`

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "peerDependencies": {
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-tap-event-plugin": "^1.0.0 || ^2.0.0"
   },
   "dependencies": {
     "babel-runtime": "^6.11.6",
