--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "keycode": "^2.1.1",
     "lodash.merge": "^4.6.0",
     "lodash.throttle": "^4.1.1",
-    "react-addons-create-fragment": "^15.0.0",
-    "react-addons-transition-group": "^15.0.0",
+    "react-addons-create-fragment": "^15.4.0",
+    "react-addons-transition-group": "^15.4.0",
     "react-event-listener": "^0.4.0",
     "recompose": "^0.20.2",
     "simple-assign": "^0.1.0",
@@ -74,15 +74,15 @@
     "babel-preset-stage-1": "^6.5.0",
     "babel-runtime": "^6.18.0",
     "chai": "^3.5.0",
-    "coveralls": "^2.11.9",
+    "coveralls": "^2.11.15",
     "cross-env": "^3.1.3",
     "enzyme": "^2.6.0",
-    "eslint": "^3.9.1",
+    "eslint": "^3.10.2",
     "eslint-find-rules": "^1.14.3",
     "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-material-ui": "./packages/eslint-plugin-material-ui",
     "eslint-plugin-mocha": "^4.7.0",
-    "eslint-plugin-react": "6.4.1",
+    "eslint-plugin-react": "^6.7.1",
     "fs-extra": "^1.0.0",
     "glob": "^7.1.1",
     "istanbul": "^1.1.0-alpha.1",
@@ -98,11 +98,10 @@
     "mocha": "^3.1.2",
     "nodemon": "^1.11.0",
     "phantomjs-prebuilt": "^2.1.13",
-    "react": "^15.2.1",
-    "react-addons-test-utils": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "react-hot-loader": "^1.3.0",
-    "react-tap-event-plugin": "^1.0.0",
+    "react": "^15.4.0",
+    "react-addons-test-utils": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-tap-event-plugin": "^2.0.0",
     "recursive-readdir-sync": "^1.0.6",
     "rimraf": "^2.5.3",
     "sinon": "^1.17.3",
