--- a/.flowconfig
+++ b/.flowconfig
@@ -1,6 +1,7 @@
 [ignore]
 
 .*/node_modules/fbjs/*
+.*/node_modules/react-native/*
 .*/node_modules/jss/lib/.*\.js\.flow
 .*/node_modules/react-swipeable-views/src/.*
 .*/node_modules/react-native/*
