[eslint] fixed errors & warnings & deprecations
and a bit of speedup witch cache

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build:babel": "NODE_ENV=release babel ./src --out-dir ./build --ignore spec.js",
     "build:copy-files": "babel-node ./scripts/copy-files.js",
     "clean:build": "rimraf build",
-    "lint": "eslint src docs/src test --quiet && echo \"eslint: no lint errors\"",
+    "lint": "eslint src docs/src test --quiet --cache && echo \"eslint: no lint errors\"",
     "lint:find-rules": "eslint-find-rules -u .eslintrc.js",
     "prebuild": "npm run clean:build",
     "test": "cross-env NODE_ENV=test babel-node test/index.js",
@@ -82,6 +82,8 @@
     "eslint": "^3.10.2",
     "eslint-find-rules": "^1.14.3",
     "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-flowtype": "^2.30.0",
+    "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-material-ui": "./packages/eslint-plugin-material-ui",
     "eslint-plugin-mocha": "^4.7.0",
     "eslint-plugin-react": "^6.7.1",
