[Core] compatibility - fix version constraints on react and react-tap-event-plugin

--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "test:unit:watch": "cross-env NODE_ENV=test babel-node test/watch.js unit"
   },
   "peerDependencies": {
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "react-tap-event-plugin": "^1.0.0 || ^2.0.0"
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "dependencies": {
     "babel-runtime": "^6.11.6",
