--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "test:unit:watch": "cross-env NODE_ENV=test babel-node test/watch.js unit"
   },
   "peerDependencies": {
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "react-tap-event-plugin": "^1.0.0 || ^2.0.0"
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "dependencies": {
-    "babel-runtime": "^6.11.6",
+    "babel-runtime": "^6.18.0",
     "inline-style-prefixer": "^2.0.1",
     "keycode": "^2.1.1",
     "lodash.merge": "^4.6.0",
@@ -74,7 +74,6 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
-    "babel-runtime": "^6.18.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.15",
     "cross-env": "^3.1.3",
