Strip `propTypes` in production build

--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,7 @@
     },
     "production": {
       "plugins": [
+        "transform-react-remove-prop-types",
         ["react-remove-properties", {"properties": ["data-mui-test"]}]
       ]
     }
