--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "build": "npm run build:icon-index && npm run build:babel && npm run build:copy-files && npm run build:es",
     "build:icon-index": "babel-node ./scripts/icon-index-generator.js",
     "build:es": "npm run build:es-index && npm run build:es-icon-index",
-    "build:es-index": "BABEL_ENV=es babel ./src/index.js --out-file ./build/index.es.js",
-    "build:es-icon-index": "BABEL_ENV=es babel ./src/svg-icons/index.js --out-file ./build/svg-icons/index.es.js",
-    "build:babel": "NODE_ENV=release babel ./src --out-dir ./build --ignore spec.js",
+    "build:es-index": " cross-env BABEL_ENV=es babel ./src/index.js --out-file ./build/index.es.js",
+    "build:es-icon-index": "cross-env BABEL_ENV=es babel ./src/svg-icons/index.js --out-file ./build/svg-icons/index.es.js",
+    "build:babel": "cross-env NODE_ENV=release babel ./src --out-dir ./build --ignore spec.js",
     "build:copy-files": "babel-node ./scripts/copy-files.js",
     "clean:build": "rimraf build",
     "lint": "eslint src docs/src test --quiet --cache && echo \"eslint: no lint errors\"",
