Simplify test setup, remove e2e tests

--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "lint": "eslint . --cache && echo \"eslint: no lint errors\"",
     "lint:find-rules": "eslint-find-rules -u .eslintrc.js",
     "prebuild": "npm run clean:build",
-    "test": "node test mocha",
-    "test:watch": "node test mocha -w",
+    "test": "cross-env NODE_ENV=test mocha",
+    "test:watch": "cross-env NODE_ENV=test mocha -w",
     "test:coverage": "istanbul cover test/index.js -- mocha",
-    "test:karma": "node test karma",
+    "test:karma": "cross-env NODE_ENV=test karma",
     "test:regressions": "webpack --config test/regressions/webpack.config.js && vrtest run --config test/vrtest.config.js",
     "flow": "flow"
   },
@@ -77,7 +77,6 @@
     "babel-register": "^6.22.0",
     "babel-runtime": "^6.22.0",
     "chai": "^3.5.0",
-    "commander": "^2.9.0",
     "coveralls": "^2.11.15",
     "cross-env": "^3.1.4",
     "doctrine": "^2.0.0",
@@ -107,7 +106,6 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.1",
     "mocha": "^3.2.0",
-    "nodemon": "^1.11.0",
     "phantomjs-prebuilt": "^2.1.14",
     "random-words": "0.0.1",
     "raw-loader": "^0.5.1",
