--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test": "cross-env NODE_ENV=test mocha",
     "test:watch": "cross-env NODE_ENV=test mocha -w",
     "test:coverage": "istanbul cover test/index.js -- mocha",
-    "test:karma": "cross-env NODE_ENV=test karma",
+    "test:karma": "cross-env NODE_ENV=test karma start test/karma.conf.js --single-run",
     "test:regressions": "webpack --config test/regressions/webpack.config.js && vrtest run --config test/vrtest.config.js",
     "flow": "flow"
   },
