--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "prebuild": "npm run clean:build",
     "test": "cross-env NODE_ENV=test mocha",
     "test:watch": "cross-env NODE_ENV=test mocha -w",
-    "test:coverage": "istanbul cover test/index.js -- mocha",
+    "test:coverage": "cross-env NODE_ENV=test nyc mocha && nyc report -r lcovonly",
     "test:karma": "cross-env NODE_ENV=test karma start test/karma.conf.js --single-run",
     "test:regressions": "webpack --config test/regressions/webpack.config.js && vrtest run --config test/vrtest.config.js",
     "flow": "flow"
@@ -95,7 +95,6 @@
     "flow-bin": "^0.38.0",
     "fs-extra": "^2.0.0",
     "glob": "^7.1.1",
-    "istanbul": "^1.1.0-alpha.1",
     "jsdom": "^9.9.1",
     "json-loader": "^0.5.4",
     "karma": "^1.4.0",
@@ -120,7 +119,7 @@
     "rimraf": "^2.5.2",
     "sinon": "^1.17.7",
     "url-loader": "^0.5.7",
-    "vrtest": "latest",
+    "vrtest": "0.1.1-beta.2",
     "webfontloader": "^1.6.27",
     "webpack": "^1.14.0"
   }
