--- a/circle.yml
+++ b/circle.yml
@@ -27,4 +27,7 @@ dependencies:
 
 test:
   override:
-    - ./scripts/run-travis-tests.sh && ./scripts/export-coverage.sh
+    - ./scripts/run-travis-tests.sh
+  post:
+    - bash <(curl -s https://codecov.io/bash)
+
