--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "prebuild": "npm run clean:build",
     "test": "cross-env NODE_ENV=test mocha",
     "test:watch": "cross-env NODE_ENV=test mocha -w",
-    "test:coverage": "cross-env NODE_ENV=test nyc mocha && nyc report -r lcovonly",
+    "test:coverage": "cross-env NODE_ENV=test BABEL_ENV=coverage nyc mocha && nyc report -r lcovonly",
     "test:karma": "cross-env NODE_ENV=test karma start test/karma.conf.js --single-run",
     "test:regressions": "webpack --config test/regressions/webpack.config.js && vrtest run --config test/vrtest.config.js",
     "flow": "flow"
@@ -64,6 +64,7 @@
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-istanbul": "^4.0.0",
     "babel-plugin-react-remove-properties": "^0.2.3",
     "babel-plugin-transform-dev-warning": "^0.1.0",
     "babel-plugin-transform-react-constant-elements": "^6.22.0",
@@ -77,7 +78,6 @@
     "babel-register": "^6.22.0",
     "babel-runtime": "^6.22.0",
     "chai": "^3.5.0",
-    "coveralls": "^2.11.15",
     "cross-env": "^3.1.4",
     "doctrine": "^2.0.0",
     "enzyme": "^2.7.0",
@@ -105,6 +105,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.1",
     "mocha": "^3.2.0",
+    "nyc": "^10.1.2",
     "phantomjs-prebuilt": "^2.1.14",
     "random-words": "0.0.1",
     "raw-loader": "^0.5.1",
@@ -122,5 +123,15 @@
     "vrtest": "0.1.1-beta.2",
     "webfontloader": "^1.6.27",
     "webpack": "^1.14.0"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.js"
+    ],
+    "exclude": [
+      "**/*.spec.js"
+    ],
+    "sourceMap": false,
+    "instrument": false
   }
 }
