--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ coverage
 /test/regressions/screenshots/output
 /test/selenium-output
 .eslintcache
+tmp
 
 # OS files
 .DS_STORE
@@ -16,4 +17,4 @@ node_modules
 
 # Editor files
 .idea
-tmp
+.vscode
