--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "jsdom": "^9.8.3",
     "json-loader": "^0.5.4",
     "karma": "^1.1.1",
+    "karma-browserstack-launcher": "^1.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
