--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "json-loader": "^0.5.4",
     "karma": "^1.4.1",
     "karma-firefox-launcher": "^1.0.0",
+    "karma-browserstack-launcher": "^1.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
