--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "flow-bin": "^0.40.0",
     "fs-extra": "^2.0.0",
     "glob": "^7.1.1",
+    "init-package-json": "^1.9.5",
     "jsdom": "^9.11.0",
     "json-loader": "^0.5.4",
     "karma": "^1.5.0",
