icon builder use init pacakge json

--- a/packages/icon-builder/package.json
+++ b/packages/icon-builder/package.json
@@ -37,10 +37,11 @@
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-test": "^0.13.0",
+    "init-package-json": ">=1.9.5",
     "lodash": "^4.0.0",
     "material-design-icons": "^3.0.0",
-    "mocha": "^3.0.0",
     "mkdirp": "^0.5.0",
+    "mocha": "^3.0.0",
     "mustache": "^2.0.0",
     "recursive-readdir-sync": "^1.0.6",
     "rimraf": "^2.0.0",
