--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "material-ui-build",
   "private": true,
-  "author": "Call-em-all Engineering Team",
-  "version": "0.17.0",
+  "author": "Material-UI Team",
+  "version": "0.17.1",
   "description": "React Components that Implement Google's Material Design.",
   "main": "./src/index.js",
   "keywords": [
