[DOCS][SelectField] - Change the example dropDownMenuProps page - ToDo: show all DropDownMenu customization property

--- a/docs/package.json
+++ b/docs/package.json
@@ -35,7 +35,7 @@
     "json-loader": "^0.5.4",
     "marked": "^0.3.5",
     "raw-loader": "^0.5.1",
-    "react-addons-perf": "^15.4.0",
+    "react-addons-perf": "*",
     "react-docgen": "^2.12.1",
     "react-motion": "^0.4.5",
     "react-native": "^0.17.0",
