Use persian-utils in date picker example

--- a/docs/package.json
+++ b/docs/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
+    "material-ui-persian-date-picker-utils": "^0.0.3",
     "react-title-component": "^1.0.1",
     "simple-assign": "^0.1.0"
   },
