--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "start": "cd docs && npm start",
     "test": "npm run lint && npm run test:unit && npm run flow",
     "test:unit": "cross-env NODE_ENV=test mocha",
+    "test:unit:grep": "cross-env NODE_ENV=test mocha -g PATTERN",
     "test:watch": "cross-env NODE_ENV=test mocha -w",
     "test:coverage": "cross-env NODE_ENV=test BABEL_ENV=coverage nyc mocha && nyc report -r lcovonly",
     "test:coverage:html": "cross-env NODE_ENV=test BABEL_ENV=coverage nyc mocha && nyc report --reporter=html",
