--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
   "peerDependencies": {
     "react": "^15.5.0",
     "react-dom": "^15.5.0",
-    "react-prop-types": "^15.5.0",
     "react-tap-event-plugin": "^2.0.1"
   },
   "dependencies": {
@@ -52,6 +51,7 @@
     "keycode": "^2.1.8",
     "lodash.merge": "^4.6.0",
     "lodash.throttle": "^4.1.1",
+    "prop-types": "^15.5.0",
     "react-addons-create-fragment": "^15.5.0",
     "react-addons-transition-group": "^15.5.0",
     "react-event-listener": "^0.4.5",
