--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/react-swipeable-views": "^0.13.0",
     "@types/react-text-mask": "^5.4.2",
     "@types/styled-components": "^4.1.11",
+    "@zeit/next-typescript": "^1.1.1",
     "argos-cli": "^0.1.1",
     "autoprefixer": "^9.0.0",
     "autosuggest-highlight": "^3.1.1",
