[docs] Add alias

--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,4 +1,14 @@
 {
   "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "noUnusedLocals": true,
+    "baseUrl": "../",
+    "paths": {
+      "@material-ui/core": ["packages/material-ui/src"],
+      "@material-ui/core/*": ["packages/material-ui/src/*"],
+      "@material-ui/styles": ["packages/material-ui-styles/src"],
+      "@material-ui/styles/*": ["packages/material-ui-styles/src/*"]
+    }
+  },
   "include": ["types", "src/pages/**/*"]
 }
