--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -7,7 +7,9 @@
       "@material-ui/core": ["packages/material-ui/src"],
       "@material-ui/core/*": ["packages/material-ui/src/*"],
       "@material-ui/styles": ["packages/material-ui-styles/src"],
-      "@material-ui/styles/*": ["packages/material-ui-styles/src/*"]
+      "@material-ui/styles/*": ["packages/material-ui-styles/src/*"],
+      "@material-ui/lab": ["packages/material-ui-lab/src"],
+      "@material-ui/lab/*": ["packages/material-ui-lab/src/*"]
     }
   },
   "include": ["types", "src/pages/**/*"]
