--- a/packages/material-ui-styles/tsconfig.json
+++ b/packages/material-ui-styles/tsconfig.json
@@ -1,12 +1,3 @@
 {
-  "extends": "../../tsconfig",
-  "compilerOptions": {
-    "baseUrl": "../../",
-    "paths": {
-      "@material-ui/core": ["packages/material-ui/src"],
-      "@material-ui/core/*": ["packages/material-ui/src/*"],
-      "@material-ui/styles": ["packages/material-ui-styles/src"],
-      "@material-ui/styles/*": ["packages/material-ui-styles/src/*"]
-    }
-  }
+  "extends": "../../tsconfig"
 }
