--- a/packages/material-ui-types/package.json
+++ b/packages/material-ui-types/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/mui-org/material-ui/tree/next/packages/material-ui-types",
   "scripts": {
-    "release": "npm publish --tag next",
+    "release": "npm publish --tag latest",
     "test": "echo 'No runtime test. Type tests are run with the `typescript` script.'",
     "typescript": "tslint -p tsconfig.json \"*.{ts,tsx}\""
   },
