--- a/package.json
+++ b/package.json
@@ -201,7 +201,7 @@
     "sinon": "^7.0.0",
     "size-limit": "^0.21.0",
     "styled-components": "^4.1.1",
-    "tslint": "^5.11.0",
+    "tslint": "5.14.0",
     "typescript": "3.2.2",
     "url-loader": "^1.0.1",
     "vrtest": "^0.2.0",
