--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@date-io/date-fns": "^1.0.0",
     "@emotion/core": "^10.0.0",
     "@emotion/styled": "^10.0.0",
-    "@trendmicro/react-interpolate": "0.5.5",
+    "@trendmicro/react-interpolate": "^0.5.5",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/enzyme": "^3.1.4",
     "@types/lodash": "^4.14.123",
@@ -114,7 +114,7 @@
     "css-loader": "^2.0.0",
     "css-mediaquery": "^0.1.2",
     "danger": "^7.0.12",
-    "date-fns": "2.0.0-alpha.21",
+    "date-fns": "^2.0.0-alpha.21",
     "doctrine": "^3.0.0",
     "downshift": "^3.0.0",
     "dtslint": "^0.4.0",
@@ -140,7 +140,7 @@
     "glob-gitignore": "^1.0.11",
     "gm": "^1.23.0",
     "isomorphic-fetch": "^2.2.1",
-    "jsdom": "13.1.0",
+    "jsdom": "^15.0.0",
     "jsonlint": "^1.6.3",
     "jss-plugin-template": "^10.0.0-alpha.12",
     "jss-rtl": "^0.2.1",
