--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@types/react-swipeable-views": "^0.13.0",
     "@types/react-text-mask": "^5.4.2",
     "@types/react-window": "^1.7.0",
-    "@types/styled-components": "^4.1.11",
+    "@types/styled-components": "4.1.12",
     "@zeit/next-typescript": "^1.1.1",
     "address": "^1.0.3",
     "argos-cli": "^0.1.1",
@@ -159,7 +159,7 @@
     "material-ui-pickers": "^2.0.2",
     "material-ui-popup-state": "^1.0.1",
     "mocha": "^5.0.0",
-    "next": "^8.0.5-canary.15",
+    "next": "8.0.5-canary.15",
     "next-plugin-transpile-modules": "^2.0.0",
     "notistack": "^0.5.0",
     "nyc": "^13.0.0",
