scaffolding the mql mock

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@babel/register": "7.0.0",
     "@date-io/date-fns": "^0.0.2",
     "@emotion/core": "^10.0.0",
-    "@emotion/styled": "^10.0.0",
+    "@emotion/styled": "^10.0.5",
     "@types/enzyme": "^3.1.4",
     "@types/react": "^16.7.10",
     "@weco/next-plugin-transpile-modules": "0.0.2",
@@ -138,10 +138,10 @@
     "prettier": "^1.8.2",
     "puppeteer": "^1.5.0",
     "raw-loader": "^0.5.1",
-    "react": "next",
+    "react": "^16.7.0-alpha.2",
     "react-autosuggest": "^9.3.2",
     "react-docgen": "^3.0.0-beta10",
-    "react-dom": "next",
+    "react-dom": "^16.7.0-alpha.2",
     "react-draggable": "^3.0.5",
     "react-final-form": "^4.0.2",
     "react-frame-component": "^4.0.2",
@@ -205,6 +205,8 @@
   ],
   "dependencies": {
     "@material-ui/core": "^3.7.0",
+    "jss": "^9.8.7",
+    "jss-preset-default": "^10.0.0-alpha.3",
     "marked": "^0.5.2",
     "nprogress": "^0.2.0",
     "prismjs": "^1.15.0"
