--- a/packages/material-ui-lab/package.json
+++ b/packages/material-ui-lab/package.json
@@ -38,8 +38,10 @@
     "react-dom": "^16.8.0"
   },
   "dependencies": {
+    "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.2.0",
     "@material-ui/utils": "^4.0.0-alpha.4",
+    "babel": "^6.23.0",
     "clsx": "^1.0.2",
     "keycode": "^2.1.9",
     "prop-types": "^15.7.2"
