--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@zeit/next-typescript": "^1.1.1",
     "address": "^1.0.3",
     "argos-cli": "^0.1.1",
+    "ast-types": "^0.12.4",
     "autoprefixer": "^9.0.0",
     "autosuggest-highlight": "^3.1.1",
     "babel-core": "^7.0.0-bridge.0",
