--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.21",
     "babel-plugin-unwrap-createStyles": "link:packages/babel-plugin-unwrap-createStyles",
     "chai": "^4.1.2",
+    "chai-dom": "^1.8.1",
     "classnames": "^2.2.6",
     "clean-css": "^4.1.11",
     "clipboard-copy": "^3.0.0",
@@ -171,6 +172,7 @@
     "react-select": "^2.0.0",
     "react-swipeable-views": "^0.13.0",
     "react-test-renderer": "^16.8.5",
+    "react-testing-library": "^7.0.0",
     "react-text-mask": "^5.0.2",
     "react-virtualized": "^9.21.0",
     "react-window": "^1.7.1",
