--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "docs:icons": "rimraf static/icons/* && node ./docs/scripts/buildIcons.js",
     "docs:size-why": "DOCS_STATS_ENABLED=true yarn docs:build",
     "docs:start": "next start",
-    "docs:i18n": "cross-env BABEL_ENV=test node ./docs/scripts/i18n.js",
+    "docs:i18n": "cross-env BABEL_ENV=test babel-node ./docs/scripts/i18n.js",
     "docs:typescript": "node docs/scripts/formattedTSDemos --watch",
     "docs:typescript:check": "tslint -p docs/tsconfig.json",
     "docs:typescript:formatted": "node docs/scripts/formattedTSDemos",
