[package.json] Add babel-polyfill to define Symbol() in IE11

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-dom": "*"
+    "react-dom": "*",
+    "babel-polyfill": "*"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
