--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-dom": "*",
-    "babel-polyfill": "*"
+    "react-dom": "*"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
