--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -50,6 +50,7 @@
     "deepmerge": "^3.0.0",
     "hoist-non-react-statics": "^3.2.1",
     "is-plain-object": "^2.0.4",
+    "jss": "^10.0.0-alpha.16",
     "normalize-scroll-left": "^0.1.2",
     "popper.js": "^1.14.1",
     "prop-types": "^15.7.2",
