--- a/packages/material-ui-benchmark/package.json
+++ b/packages/material-ui-benchmark/package.json
@@ -30,7 +30,7 @@
     "emotion": "^10.0.9",
     "emotion-server": "^10.0.9",
     "nodemod": "^1.5.19",
-    "react": "16.3.0",
+    "react": "^16.3.0",
     "react-jss": "^10.0.0-alpha.12",
     "styled-system": "^4.0.5"
   }
