--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -14,13 +14,16 @@
     "cross-env": "latest",
     "express": "latest",
     "nodemon": "latest",
+    "npm-run-all": "latest",
     "react": "latest",
     "react-dom": "latest",
     "webpack": "latest",
     "webpack-cli": "latest"
   },
   "scripts": {
-    "start": "nodemon --exec yarn babel-node -- server.js && webpack -w",
+    "start": "npm-run-all -p build serve",
+    "build": "webpack -w",
+    "serve": "nodemon --ignore ./build --exec babel-node -- server.js",
     "production": "cross-env NODE_ENV=production npm start"
   }
 }
