--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -53,6 +53,7 @@
     "normalize-scroll-left": "^0.1.2",
     "popper.js": "^1.14.1",
     "prop-types": "^15.7.2",
+    "react-event-listener": "^0.6.6",
     "react-transition-group": "^4.0.0",
     "warning": "^4.0.1"
   },
