--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "babel-plugin-istanbul": "^5.2.0",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-optimize-clsx": "^2.3.0",
+    "babel-plugin-optimize-react": "^0.0.4",
     "babel-plugin-preval": "^2.0.0",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "babel-plugin-tester": "^6.4.0",
