--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs:
       - install_js
       - run:
           name: Transpile TypeScript demos
-          command: yarn docs:typescript:formatted --disable-cache --immediate-exports
+          command: yarn docs:typescript:formatted --disable-cache
       - run:
           name: Are the compiled TypeScript demos equivalent to the JavaScript demos?
           command: git add -A && git diff --exit-code --staged
