--- a/packages/material-ui-types/package.json
+++ b/packages/material-ui-types/package.json
@@ -33,5 +33,8 @@
   "sideEffects": false,
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@types/react": "^16.8.20"
   }
 }
