[ButtonBase] Improve test suite

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@trendmicro/react-interpolate": "^0.5.5",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/chai": "^4.1.7",
+    "@types/chai-dom": "^0.0.7",
     "@types/enzyme": "^3.1.4",
     "@types/jsdom": "^12.2.3",
     "@types/lodash": "^4.14.123",
@@ -73,6 +74,7 @@
     "@types/react-text-mask": "^5.4.2",
     "@types/react-virtualized": "^9.21.1",
     "@types/react-window": "^1.7.0",
+    "@types/sinon": "^7.0.13",
     "@types/styled-components": "4.1.12",
     "@zeit/next-typescript": "^1.1.1",
     "address": "^1.0.3",
