Update next.js example

--- a/examples/nextjs-next-with-typescript/package.json
+++ b/examples/nextjs-next-with-typescript/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/next": "latest",
     "@types/react": "latest",
-    "@types/react-dom": "latest"
+    "@types/react-dom": "latest",
+    "typescript": "latest"
   }
 }
