dropping onError from MuiLink, which caused a TypeScript error. Reverting to "next": "latest".

--- a/examples/nextjs-with-typescript/package.json
+++ b/examples/nextjs-with-typescript/package.json
@@ -6,7 +6,7 @@
     "@material-ui/core": "latest",
     "@material-ui/styles": "latest",
     "clsx": "latest",
-    "next": "next",
+    "next": "latest",
     "react": "latest",
     "react-dom": "latest"
   },
