--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
     "dev": "rimraf ../node_modules/.cache/babel-loader && cross-env NODE_ENV=development node src/server.js",
     "deploy": "git push material-ui-docs master:latest",
     "export": "rimraf docs/export && next export -o export && yarn build-sw && cp -r netlify/. export",
+    "icons": "rimraf static/icons/* && node ./scripts/buildIcons.js",
     "typescript": "tslint -p tsconfig.json \"src/pages/**/*.{ts,tsx}\""
   },
   "dependencies": {
@@ -50,7 +51,6 @@
     "emotion-theming": "^10.0.5",
     "fg-loadcss": "^2.0.1",
     "final-form": "^4.11.0",
-    "gm": "^1.23.0",
     "isomorphic-fetch": "^2.2.1",
     "json2mq": "^0.2.0",
     "jss-plugin-template": "10.0.0-alpha.17",
@@ -89,5 +89,8 @@
     "styled-components": "^4.1.1",
     "url-loader": "^1.0.1",
     "webfontloader": "^1.6.28"
+  },
+  "devDependencies": {
+    "gm": "^1.23.0"
   }
 }
