--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "docs:export": "yarn workspace docs export",
     "docs:icons": "yarn workspace docs icons",
     "docs:size-why": "cross-env DOCS_STATS_ENABLED=true yarn docs:build",
-    "docs:start": "next start",
+    "docs:start": "yarn workspace docs icons",
     "docs:i18n": "cross-env BABEL_ENV=test babel-node ./docs/scripts/i18n.js",
     "docs:typescript": "node docs/scripts/formattedTSDemos --watch",
     "docs:typescript:check": "yarn workspace docs typescript",
