--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "docs:size-why": "cross-env DOCS_STATS_ENABLED=true yarn docs:build",
     "docs:start": "yarn workspace docs icons",
     "docs:i18n": "cross-env BABEL_ENV=test babel-node ./docs/scripts/i18n.js",
-    "docs:typescript": "node docs/scripts/formattedTSDemos --watch",
-    "docs:typescript:check": "yarn workspace docs typescript",
+    "docs:typescript": "yarn workspace docs typescript",
+    "docs:typescript:check": "yarn workspace docs typescript:check",
     "docs:typescript:formatted": "node docs/scripts/formattedTSDemos",
     "jsonlint": "yarn --silent jsonlint:files | xargs -n1 jsonlint -q -c && echo \"jsonlint: no lint errors\"",
     "jsonlint:files": "find . -name \"*.json\" | grep -v -f .eslintignore",
@@ -50,7 +50,6 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
     "@babel/register": "^7.0.0",
     "@testing-library/react": "^8.0.2",
     "@types/chai": "^4.1.7",
