Reorganize docs:typescript* tasks

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "docs:size-why": "cross-env DOCS_STATS_ENABLED=true yarn docs:build",
     "docs:start": "yarn workspace docs icons",
     "docs:i18n": "cross-env BABEL_ENV=test babel-node ./docs/scripts/i18n.js",
-    "docs:typescript": "yarn workspace docs typescript",
-    "docs:typescript:check": "yarn workspace docs typescript:check",
-    "docs:typescript:formatted": "yarn workspace docs typescript:formatted",
+    "docs:typescript": "echo \"Moved to 'yarn workspace docs typescript:transpile:dev'\" && exit 1",
+    "docs:typescript:check": "echo \"Moved to 'yarn workspace docs typescript'\" && exit 1",
+    "docs:typescript:formatted": "echo \"Moved to 'yarn workspace docs typescript:transpile'\" && exit 1",
     "jsonlint": "yarn --silent jsonlint:files | xargs -n1 jsonlint -q -c && echo \"jsonlint: no lint errors\"",
     "jsonlint:files": "find . -name \"*.json\" | grep -v -f .eslintignore",
     "lint": "eslint . --cache --report-unused-disable-directives",
