--- a/docs/package.json
+++ b/docs/package.json
@@ -12,9 +12,9 @@
     "export": "rimraf docs/export && next export -o export && yarn build-sw && cp -r netlify/. export",
     "icons": "rimraf static/icons/* && node ./scripts/buildIcons.js",
     "start": "next start",
-    "typescript": "node scripts/formattedTSDemos --watch",
-    "typescript:check": "tslint -p tsconfig.json \"src/pages/**/*.{ts,tsx}\"",
-    "typescript:formatted": "node scripts/formattedTSDemos"
+    "typescript": "tslint -p tsconfig.json \"src/pages/**/*.{ts,tsx}\"",
+    "typescript:transpile": "node scripts/formattedTSDemos",
+    "typescript:transpile:dev": "node scripts/formattedTSDemos --watch"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.0.0",
