[docs] Use ES6 modules for client builds

--- a/docs/package.json
+++ b/docs/package.json
@@ -11,6 +11,7 @@
     "deploy": "git push material-ui-docs master:latest",
     "export": "rimraf docs/export && next export -o export && yarn build-sw && cp -r cdn/. export",
     "icons": "rimraf static/icons/* && node ./scripts/buildIcons.js",
+    "postinstall": "patch-package",
     "start": "next start",
     "typescript": "tslint -p tsconfig.json \"src/pages/**/*.{ts,tsx}\"",
     "typescript:transpile": "node scripts/formattedTSDemos",
@@ -65,7 +66,9 @@
     "next": "^9.0.2",
     "next-transpile-modules": "^2.3.1",
     "notistack": "^0.8.6",
+    "patch-package": "^6.1.2",
     "postcss": "^7.0.0",
+    "postinstall-postinstall": "^2.0.0",
     "raw-loader": "^1.0.0",
     "react-autosuggest": "^9.3.2",
     "react-docgen": "^5.0.0-beta",
